--- a/DCtame.css
+++ b/DCtame.css
@@ -4,3 +4,5 @@
  * @description Describe the aesthetic. Maybe a support server link.
  * @version 0.0.1
  */
+
+@import url("https://github.com/DimailCreator/DimailCreator/edit/main/DCtame.css");
